Closed Bug 1457912 Opened 7 years ago Closed 7 years ago

[WordPress] The G+ pop-up window does not have a scroll bar

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox-esr52 --- wontfix
firefox-esr60 --- wontfix
firefox59 --- wontfix
firefox60 --- wontfix
firefox61 --- fixed
firefox62 --- fixed

People

(Reporter: vlucaci, Assigned: xidorn)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached image Not Scrollable.JPG
[Affected versions]: -60.0b16 -59.0.3 [Affected platforms]: - Ubuntu 16.04 x64 - Windows 10 x64 - macOS 10.13 [Steps to reproduce]: 1.Go to this link:WordPress.com 2.Log in with an existing account. 3.Go to Sharing submenu from Configure. 4.Select to connect with G+. 5.Select Gmail account you wish to share with website. [Expected result]: -The confirmation prompt is displayed in a new windows and user can scroll down to confirm or reject form. [Actual result]: - It can be noticed that the new confirmation window is not scroll-able and multiple elements from the window cannot be viewed. [Regression range]: -This bug is a regression, I will return with the push log ASAP [Additional notes]: -This issue is not reproducible on Chrome -3 Warning messages are displayed inside the Web Console when reaching the affected window: "Content Security Policy: Ignoring “'unsafe-inline'” within script-src: ‘strict-dynamic’ specified Content Security Policy: Ignoring “https:” within script-src: ‘strict-dynamic’ specified Content Security Policy: Ignoring “http:” within script-src: ‘strict-dynamic’ specified"
To reproduce this issue: run > window.open("https://bugzilla.mozilla.org", "", "toolbar=0,width=780,height=500") in web console (and allow the window to open). The new window opened by this function call would be not scrollable. The key is "toolbar=0".
Flags: webcompat?
Component: Layout: Block and Inline → DOM
OK, this is a silly bug...
Assignee: nobody → xidorn+moz
Component: DOM → XP Toolkit/Widgets: Menus
Comment on attachment 8973569 [details] Bug 1457912 - Don't disable scrollbars when the window feature isn't listed explicitly. https://reviewboard.mozilla.org/r/241914/#review247762 Code analysis found 2 defects in this patch: - 2 defects found by mozlint You can run this analysis locally with: - `./mach lint path/to/file` (JS/Python) If you see a problem in this automated review, please report it here: http://bit.ly/2y9N9Vx ::: toolkit/components/windowwatcher/test/browser_new_content_window_chromeflags.js:178 (Diff revision 1) > + * @param win (nsIDOMWindow) > + * @returns int > + */ > +async function getContentChromeFlags(win) { > + let b = win.gBrowser.selectedBrowser; > + return await ContentTask.spawn(b, null, async function() { Error: Redundant use of `await` on a return value. [eslint: no-return-await] ::: toolkit/components/windowwatcher/test/browser_new_content_window_chromeflags.js:300 (Diff revision 1) > + * Opens a window with some chrome flags specified, which should not affect > + * scrollbars flag which defaults to true when not disabled explicitly. > + */ > +add_task(async function test_scrollbars_flag() { > + const SCRIPT = 'window.open("about:blank", "_blank", "toolbar=0");'; > + const SCRIPT_PAGE = `data:text/html,<script>${SCRIPT}</script>`; Error: 'script_page' is already declared in the upper scope. [eslint: no-shadow]
Comment on attachment 8973569 [details] Bug 1457912 - Don't disable scrollbars when the window feature isn't listed explicitly. https://reviewboard.mozilla.org/r/241914/#review247852
Attachment #8973569 - Flags: review?(bugs) → review+
Pushed by xquan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f8876cbee5fa Don't disable scrollbars when the window feature isn't listed explicitly. r=smaug
Depends on: 1459847
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Comment on attachment 8973569 [details] Bug 1457912 - Don't disable scrollbars when the window feature isn't listed explicitly. Approval Request Comment [Feature/Bug causing the regression]: very old regression [User impact if declined]: may not see scrollbar in some window opened by script [Is this code covered by automated tests?]: yes [Has the fix been verified in Nightly?]: just landed [Needs manual test from QE? If yes, steps to reproduce]: window.open("https://bugzilla.mozilla.org", "", "toolbar=0,width=780,height=500") [List of other uplifts needed for the feature/fix]: n/a [Is the change risky?]: shouldn't be risky. [Why is the change risky/not risky?]: The old behavior was clearly undesired, but it wasn't reported for long, so presumably it isn't really widely used. [String changes made/needed]:
Attachment #8973569 - Flags: approval-mozilla-beta?
Comment on attachment 8973569 [details] Bug 1457912 - Don't disable scrollbars when the window feature isn't listed explicitly. We're early in the cycle, so we should have time to catch any fallout from this. Approved for 61.0b4. Thanks for including a test too.
Attachment #8973569 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Component: XP Toolkit/Widgets: Menus → XUL
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: