Bug 1457912 - Don't disable scrollbars when the window feature isn't listed explicitly. r=smaug, a=RyanVM

MozReview-Commit-ID: CB0PVroA86L

--HG--
extra : source : f8876cbee5fa17c374115ed04404a3a3fc61ba40